Change-Id: I4b2a4a3b938aba707759721741d90e71b1fb0318

--- a/src/main/webapp/pages/casos.xhtml
+++ b/src/main/webapp/pages/casos.xhtml
@@ -163,7 +163,7 @@
 			</p:panelGrid>
 
 			<h:panelGrid columns="2">
-				<p:commandButton value="Salvar" actionListener="#{casosBean.salvar}"
+				<p:commandButton value="Salvar" actionListener="#{casosBean.salvar2}"
 					update=":mensagem :formCadastro:painelCadastro :formListagem:tabela" />
 				<p:commandButton value="Fechar" update=":formListagem:tabela"
 					oncomplete="PF('dlgMatriculas').hide ();" />
@@ -247,6 +247,8 @@
 					maxlength="11" size="11" onkeypress="mascara(this, valor)" >
 					<f:convertNumber locale="pt_BR" minFractionDigits="2" />
 					</p:inputText>
+					
+					
 
 			</p:panelGrid>
 
